tests/negative_tests/semantic_errors/array_zero_size.c
// INVALID - Semantic Error: array size must be positive
int main() {
    int arr[0];  // ERROR: array size must be > 0
    return 0;
}
